# cvp-chrome-extension-ai-meeting-summarizer-cmd6768r

./: AI_PROJECT_PROMPT.md  BLUEPRINT.json  FEATURES.json  PROJECT_DETAILS.json  README.md  TECHNICAL_STACK.json  background.js  content.js  main.py  manifest.json  popup.html  popup.js  pyproject.toml
