[tool.poetry]
name = "chrome-extension-ai-meeting-summarizer-cmd6768r"
version = "0.1.0"
description = "Chrome extension for sales teams that auto-transcribes and summarizes Google Meet/Zoom calls locally using WebRTC. Elite because it solves the $50B/year meeting inefficiency problem with $19/month subscription model."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "^2.8.2"
python-multipart = "^0.0.9"
streamlit = "^1.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
